Update to 1.4.0. See changelog for all changes